running as such channels.

=item *

Fixed a buffer overflow when using B<imapfeed> with more than a million
commands during the same IMAP session.  Thanks to David Binderman for
the bug report.

=item *

Fixed a segfault occurring in B<innd> on systems where time_t is a
64-bit integer.  Thanks to S<S.P. Zeidler> for the patch.

=item *

Fixed an issue where users were denied posting because of an overlapping
buffer copy in a check B<nnrpd> was doing.  Thanks to Florian Schlichting
for the patch.

=item *

Fixed a regression that occurred in S<INN 2.5.3> regarding the path used
by default by B<pullnews> for its configuration file.  Instead of looking
in the running user's home directory, it was looking in the I<pathnews>
directory parametered in F<inn.conf>.  Thanks to Tony Evans for the
bug report.

=item *

When neither B<wget> nor B<ncftpget> nor B<ncftp> was found at configure
time, the path to the B<simpleftp> substitution program shipped with
INN was not proprely set in B<innshellvars>, B<innshellvars.pl>, and
the C<INN::Config> Perl module.  Thanks to Christian Garbs for the
bug report.

=item *

B<ckpasswd> no longer tries to use the ndbm compatibility layer provided
by S<Berkeley DB> if S<Berkeley DB> has been built without ndbm support.
Also add support for gdbm libraries in B<ckpasswd>.

=item *

Fixed a Perl warning in B<inncheck>; using C<defined(@array)> has been
deprecated since S<Perl 5.16>.

=item *

Fixed the occurrence of an unexpected C<cant select> error generated by
B<innd>.  Thanks to Paul Tomblin for having caught that long-standing
issue.

=item *

When building INN with S<Berkeley DB> support, no longer add
F<-L/usr/lib> to the linker include flags; unconditionally adding it
may break the build on systems using lib32 and lib64 directories.

=back

=head1 Changes in 2.5.3

Please note that the HTML_STATUS compile-time option has been replaced
with the I<htmlstatus> parameter in F<inn.conf>.  If you used HTML_STATUS,